[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
lib = { path = "../lib"}
aes-gcm = "0.10.3"
oqs = { version = "0.9.0", features = ["vendored"] }
base64 = "0.22.1"
chrono = "0.4.38"
log = "0.4.21"
simplelog = "0.12.2"
serde_json = "1.0.117"
serde = {version = "1.0.202", features = ["derive"]}
crossterm = "0.27.0"
ratatui = "0.26.3"
uuid = { version = "1.8.0", features = ["v4"] }
tokio = {version = "1.37.0", features = ["full"]}
socket2 = "0.5.7"